--- a/guides/advanced-testing-patterns/parameterized-and-typed-tests.mdx
+++ b/guides/advanced-testing-patterns/parameterized-and-typed-tests.mdx
@@ -1,295 +1,315 @@
 ---
 title: "Parameterized and Typed Tests"
-description: "Step-by-step guide to writing parameterized and type-parameterized tests in GoogleTest, enabling test case reuse and validation across a range of values and types. Demonstrates macros, patterns, and real-life scenarios."
+description: "Unlock the full power of test reuse through value and type parameterization. This guide covers setting up parameterized suites and type tests, reducing duplication while expanding coverage across varied inputs and data types."
 ---
 
-# Parameterized and Typed Tests in GoogleTest
+# Parameterized and Typed Tests
 
-## Overview
-
-Parameterized and typed tests in GoogleTest enable you to write flexible, reusable test logic that runs across multiple values or types without duplicating code. This guide helps you write value-parameterized tests (varying test data) and typed tests (varying test types) step-by-step, empowering you to validate your code comprehensively with less boilerplate.
+GoogleTest empowers you to efficiently reuse test logic across different values and types through *value-parameterized tests* and *typed tests*. This guide provides actionable steps to set up these tests, drastically reducing code duplication while expanding coverage across diverse inputs and data types.
 
 ---
 
 ## Value-Parameterized Tests
 
-### Purpose
-Use value-parameterized tests to run the same test logic on multiple input values. This avoids repetitive code and ensures your code handles a wide range of inputs correctly.
+Value-parameterized tests enable running the same test logic repeatedly, each time with a different input parameter. This is ideal for verifying code behavior under a variety of runtime values without duplicating test code.
 
-### Prerequisites
-- Familiarity with GoogleTest basics and test fixtures (`TEST_F`)  
-- Include `<gtest/gtest.h>` in your test source file
+### Workflow Overview
 
-### Expected Outcome
-You will have a parameterized test suite where each test runs with every parameter value you specify, with uniquely named test instances.
-
-### Time Estimate
-5-15 minutes for initial implementation
-
-### Difficulty
-Intermediate
-
----
+- **Task**: Create a single test suite that runs multiple tests with different input parameters.
+- **Prerequisites**: Knowledge of test fixtures and GoogleTest basic macros; GoogleTest installed and integrated into your build.
+- **Expected Outcome**: One test suite with multiple instantiations each receiving a distinct parameter.
+- **Time Estimate**: 10-20 minutes
+- **Difficulty**: Intermediate
 
 ### Step-by-Step Instructions
 
-1. **Define a Test Fixture Class**
+<Steps>
+<Step title="Define a Parameterized Test Fixture">
+Define a test fixture class that inherits from `::testing::TestWithParam<T>`, where `T` is the type of your test parameter (must be copyable).
 
-    Create a test fixture class deriving from `testing::TestWithParam<T>`, where `T` is the parameter type:
+```cpp
+class MyParamTest : public ::testing::TestWithParam<int> {
+  // Your shared setup or utilities
+};
+```
 
-    ```cpp
-    class FooTest : public ::testing::TestWithParam<const char*> {
-      // Optional: fixture setup or helpers
-    };
-    ```
+This fixture class allows your tests to access the current parameter via `GetParam()`.
+</Step>
 
-2. **Define Parameterized Test Cases using `TEST_P`**
+<Step title="Write Parameterized Tests Using TEST_P">
+Define your tests using the macro `TEST_P` instead of `TEST_F`.
 
-    Use `TEST_P` to define tests within this fixture. Inside the test body, call `GetParam()` to access the current parameter value:
+Inside each test, call `GetParam()` to access the current parameter.
 
-    ```cpp
-    TEST_P(FooTest, DoesBlah) {
-      EXPECT_TRUE(foo.Blah(GetParam()));
-    }
+```cpp
+TEST_P(MyParamTest, IsPositive) {
+  EXPECT_GT(GetParam(), 0);
+}
+```
 
-    TEST_P(FooTest, HasBlahBlah) {
-      // Additional parameterized test logic
-    }
-    ```
+You can define multiple `TEST_P` tests for one fixture.
+</Step>
 
-3. **Instantiate the Test Suite with Parameter Values**
+<Step title="Instantiate Tests with Parameter Generators">
+Use `INSTANTIATE_TEST_SUITE_P` to generate test instances for your parameterized tests.
 
-    Use `INSTANTIATE_TEST_SUITE_P` to instantiate the tests with your parameters. GoogleTest provides several parameter generators (listed below) to specify values:
+You must provide:
 
-    ```cpp
-    INSTANTIATE_TEST_SUITE_P(
-      InstantiationName, FooTest, testing::Values("meeny", "miny", "moe"));
+- A unique prefix name to distinguish this instantiation.
+- The test fixture name.
+- A *parameter generator* that creates a sequence of test parameters.
 
-    // Or using an array with ValuesIn:
-    const char* pets[] = {"cat", "dog"};
-    INSTANTIATE_TEST_SUITE_P(Pets, FooTest, testing::ValuesIn(pets));
-    ```
+GoogleTest provides several parameter generators:
 
-4. **Run Your Tests**
+| Generator | Description |
+| --- | --- |
+| `Range(begin, end [, step])` | Generates values from `begin` up to but not including `end` with `step` increments. |
+| `Values(v1, v2, ..., vN)` | Enumerates explicit values. |
+| `ValuesIn(container)` | Uses values from a container or array. |
+| `Bool()` | Generates boolean values `false` and `true`. |
+| `Combine(g1, g2, ..., gN)` | Produces the Cartesian product (all combinations) of multiple generators. |
 
-    When you run tests, GoogleTest will create separate test instances for each parameter. Example test case names:
+Example:
 
-    ```none
-    InstantiationName/FooTest.DoesBlah/0  // using "meeny"
-    InstantiationName/FooTest.DoesBlah/1  // using "miny"
-    InstantiationName/FooTest.DoesBlah/2  // using "moe"
-    ```
+```cpp
+INSTANTIATE_TEST_SUITE_P(
+    PositiveValues, MyParamTest,
+    ::testing::Values(1, 2, 3, 10, 100));
+```
+</Step>
 
-5. **(Optional) Custom Test Name Generation**
+<Step title="Run Your Tests and Interpret Output">
+After building, run your test executable. You will see GoogleTest run multiple tests:
 
-    Provide a custom name generator function or functor as the last argument to `INSTANTIATE_TEST_SUITE_P` for meaningful parameter names (must be unique, valid identifiers):
+```
+PositiveValues/MyParamTest.IsPositive/0
+PositiveValues/MyParamTest.IsPositive/1
+PositiveValues/MyParamTest.IsPositive/2
+```
 
-    ```cpp
-    INSTANTIATE_TEST_SUITE_P(
-      CustomNames, FooTest, testing::Values("val1", "val2"),
-      [](const testing::TestParamInfo<FooTest::ParamType>& info) {
-        return std::string("Param") + std::to_string(info.index);
-      });
-    ```
+Each test corresponds to a parameter value and reports success or failure.
 
----
+Use the names for filtering with `--gtest_filter` if desired.
+</Step>
+</Steps>
 
-### Common Parameter Generators
+### Practical Tips
 
-| Generator                      | Description                                                   | Example                         |
-|-------------------------------|---------------------------------------------------------------|--------------------------------|
-| `Range(begin, end[, step])`    | Produces values from `begin` to `end` (exclusive), stepping by `step` (default 1) | `Range(1, 5)` produces `{1, 2, 3, 4}`|
-| `Values(v1, .., vN)`           | Produces given values                                           | `Values(3, 5, 8)`               |
-| `ValuesIn(container)`          | Produces all values in a container or iterator range            | `ValuesIn(array)` or `ValuesIn(vec.begin(), vec.end())` |
-| `Bool()`                      | Produces `{false, true}` for Boolean tests                      | `Bool()`                       |
-| `Combine(g1, g2, ..., gN)`     | Cartesian product of multiple parameter generators              | `Combine(Values(1, 2), Bool())`|
+- If your test parameter is a pointer, manage the lifespan carefully to avoid dangling pointers.
+- You can instantiate the same parameterized test suite multiple times with different parameter sets by using distinct instantiation prefixes.
+- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(TestSuiteName)` to prevent errors if you define parameterized tests without instantiation (useful for abstract tests).
+- The parameter generator expressions are evaluated during `InitGoogleTest()`, allowing dynamic parameter sets based on runtime conditions.
 
----
+### Example
 
-### Best Practices & Tips
+```cpp
+class StringLengthTest : public ::testing::TestWithParam<std::string> {};
 
-- Use appropriate parameter types that clearly represent your data.
-- Prefer `ValuesIn` for container-based parameters to simplify maintenance.
-- Use `Combine` for tests needing multiple parameters in tuple form.
-- Define custom parameter names for readability in test results.
-- Place the `INSTANTIATE_TEST_SUITE_P` at global or namespace scope, **not** inside functions.
+TEST_P(StringLengthTest, LengthIsCorrect) {
+  EXPECT_EQ(GetParam().length(), static_cast<size_t>(3));
+}
 
----
+INSTANTIATE_TEST_SUITE_P(
+    ThreeCharStrings, StringLengthTest,
+    ::testing::Values("abc", "def", "xyz"));
+```
 
-### Common Pitfalls
-
-- Forgetting to instantiate a parameterized test suite causes failures in `GoogleTestVerification`.
-- Using raw pointers as parameters requires manual lifetime management.
-- Parameters must be copyable.
-- Generated test names must be unique and contain only ASCII alphanumeric or underscores.
+This runs three tests, each verifying the length for a different string.
 
 ---
 
 ## Typed Tests
 
-### Purpose
-Typed tests let you run the same test logic across different types without duplication, perfect for testing template classes or interfaces.
+Typed tests allow you to write a test fixture template and run the same tests over a list of types, verifying type-dependent behavior.
 
-### Prerequisites
-- Familiarity with class templates and GoogleTest test fixtures
-- Include `<gtest/gtest.h>`
+### Workflow Overview
 
-### Expected Outcome
-You will have test suites that automatically instantiate tests for each specified type with separate test instances identified by type.
-
-### Time Estimate
-5-15 minutes
-
-### Difficulty
-Intermediate
-
----
+- **Task**: Run the same test suite for each type in a compile-time list.
+- **Prerequisites**: Familiarity with C++ templates and test fixtures.
+- **Expected Outcome**: Multiple test suites instantiated with different type parameters.
+- **Time Estimate**: 15-25 minutes
+- **Difficulty**: Intermediate to Advanced
 
 ### Step-by-Step Instructions
 
-1. **Define a Fixture Class Template**
-
-    Create a class template derived from `testing::Test`:
-
-    ```cpp
-    template <typename T>
-    class FooTest : public testing::Test {
-     public:
-      // Test setup and helper members here
-      using List = std::list<T>;
-      static T shared_;
-      T value_;
-    };
-    ```
-
-2. **Associate a List of Types with the Test Suite**
-
-    Create a using-alias for a `testing::Types<...>` list specifying the types to test and register them with:
-
-    ```cpp
-    using MyTypes = testing::Types<char, int, unsigned int>;
-    TYPED_TEST_SUITE(FooTest, MyTypes);
-    ```
-
-    You can also provide a custom name generator class for more informative suite names.
-
-3. **Define Typed Tests Using `TYPED_TEST`**
-
-    Write typed test cases using `TYPED_TEST`. Inside the test, use `TypeParam` to refer to the current type and `TestFixture` for fixture class:
-
-    ```cpp
-    TYPED_TEST(FooTest, DoesBlah) {
-      TypeParam n = this->value_;
-      n += TestFixture::shared_;
-      typename TestFixture::List values;
-      values.push_back(n);
-      EXPECT_TRUE(...);
-    }
-
-    TYPED_TEST(FooTest, HasPropertyA) {
-      // Another test
-    }
-    ```
-
-4. **Run Your Typed Tests**
-
-    GoogleTest automatically instantiates and runs tests for all types in `MyTypes`.
-
----
-
-### Type-Parameterized Tests
-
-For scenarios where the list of types might be defined later or in multiple translation units, use Type-Parameterized Tests to declare tests in a header and instantiate them separately.
-
-1. Declare test suite with `TYPED_TEST_SUITE_P`.
-2. Define tests with `TYPED_TEST_P`.
-3. Register tests using `REGISTER_TYPED_TEST_SUITE_P`.
-4. Instantiate with `INSTANTIATE_TYPED_TEST_SUITE_P` specifying types.
-
-Example snippet:
+<Steps>
+<Step title="Define a Fixture Class Template">
+Write a class template that derives from `testing::Test`. This template class can have typedefs, static and instance members related to the type parameter.
 
 ```cpp
 template <typename T>
-class FooTest : public testing::Test {};
+class MyTypedTest : public testing::Test {
+ public:
+  T value_;
+  static T static_value_;
+};
 
-TYPED_TEST_SUITE_P(FooTest);
-
-TYPED_TEST_P(FooTest, DoesBlah) { ... }
-
-REGISTER_TYPED_TEST_SUITE_P(FooTest, DoesBlah);
-
-using MyTypes = testing::Types<char, int, unsigned int>;
-INSTANTIATE_TYPED_TEST_SUITE_P(My, FooTest, MyTypes);
-```
-
----
-
-### Tips
-
-- Use type-parameterized tests to build abstract test suites for interfaces.
-- Provide custom name generators to improve the naming of instantiated suites.
-- Ensure all test patterns are registered before instantiation.
-
----
-
-## Troubleshooting Common Issues
-
-### Parameterized Tests
-- **No Instances Run:** Ensure you have called `INSTANTIATE_TEST_SUITE_P` for every `TEST_P` suite.
-- **Duplicate Test Names:** Custom parameter name generators must yield unique names without invalid characters.
-- **Type Errors on Parameters:** Parameters must be copyable; raw pointers require careful memory handling.
-
-### Typed Tests
-- **Missing `REGISTER_TYPED_TEST_SUITE_P`:** You must register typed test patterns before instantiating.
-- **Compilation Errors:** Ensure fixtures and types match usage; type lists are correctly formed.
-
-## Summary
-Parameterized and typed tests in GoogleTest significantly reduce code duplication and increase test coverage by running test logic across multiple values or types. Leveraging `TEST_P` and `INSTANTIATE_TEST_SUITE_P` for value parameters, and `TYPED_TEST_SUITE` and `TYPED_TEST` for types, you can write scalable, maintainable test suites.
-
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
-- [Testing Reference - TEST_P and INSTANTIATE_TEST_SUITE_P](https://github.com/google/googletest/blob/main/docs/reference/testing.md#TEST_P)
-- [Advanced Guide - Value-Parameterized and Typed Tests](https://github.com/google/googletest/blob/main/docs/advanced.md#value-parameterized-tests)
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-
----
-
-For hands-on examples, see `samples/sample7_unittest.cc` and `samples/sample8_unittest.cc` in the GoogleTest repository.
-
----
-
-# Example: A Complete Value-Parameterized Test
-
-```cpp
-// 1. Define fixture
-class FactorialTest : public ::testing::TestWithParam<int> {};
-
-// 2. Create test
-TEST_P(FactorialTest, IsNonNegative) {
-  int n = GetParam();
-  EXPECT_GE(Factorial(n), 0);
-}
-
-// 3. Instantiate
-INSTANTIATE_TEST_SUITE_P(PositiveIntegers, FactorialTest, testing::Range(1, 10));
-```
-
-# Example: A Complete Typed Test
-
-```cpp
-// 1. Define fixture
 template <typename T>
-class NumericLimitsTest : public ::testing::Test {};
+T MyTypedTest<T>::static_value_ = T();
+```
+</Step>
 
-// 2. Register types
-using MyTypes = ::testing::Types<int, double, long>;
-TYPED_TEST_SUITE(NumericLimitsTest, MyTypes);
+<Step title="Define the List of Types">
+Create a type list using `::testing::Types<T1, T2, ...>`.
 
-// 3. Write typed test
-TYPED_TEST(NumericLimitsTest, IsSigned) {
-  EXPECT_TRUE(std::numeric_limits<TypeParam>::is_signed);
+```cpp
+using MyTypes = ::testing::Types<int, double, char>;
+```
+</Step>
+
+<Step title="Associate the Type List with the Fixture">
+Use `TYPED_TEST_SUITE` to associate the fixture template with the type list.
+
+```cpp
+TYPED_TEST_SUITE(MyTypedTest, MyTypes);
+```
+</Step>
+
+<Step title="Write Typed Tests with TYPED_TEST">
+Use `TYPED_TEST` instead of `TEST_F` to define tests inside the fixture template.
+
+Inside the tests, use `TypeParam` to refer to the type parameter.
+
+```cpp
+TYPED_TEST(MyTypedTest, IsDefaultZero) {
+  TypeParam zero{};
+  EXPECT_EQ(zero, this->value_);
 }
 ```
+</Step>
+
+<Step title="Build and Run">
+Compile and run your tests. GoogleTest generates separate test suites named after the fixture plus the type (specialized).
+
+Example output:
+
+```
+MyTypedTest/0.IsDefaultZero
+MyTypedTest/1.IsDefaultZero
+MyTypedTest/2.IsDefaultZero
+```
+
+Each corresponds to the test run for each type.
+</Step>
+</Steps>
+
+### Practical Tips
+
+- Use `typename TestFixture::SomeType` and `this->member_` inside `TYPED_TEST` bodies to address dependent types and members properly.
+- You can specify custom type names with an optional third parameter to `TYPED_TEST_SUITE` to generate clearer test suite names.
+- Test setup and teardown methods like `SetUpTestSuite()` should be marked `public` in parameterized tests.
+
+### Example
+
+```cpp
+template <typename T>
+class NumericTest : public ::testing::Test {
+ public:
+  static T default_value_;
+};
+
+template <typename T>
+T NumericTest<T>::default_value_ = T();
+
+using NumericTypes = ::testing::Types<int, float>;
+TYPED_TEST_SUITE(NumericTest, NumericTypes);
+
+TYPED_TEST(NumericTest, DefaultIsZero) {
+  EXPECT_EQ(TypeParam(), this->default_value_);
+}
+```
+
+---
+
+## Type-Parameterized Tests
+
+Type-parameterized tests are similar to typed tests but support declaration and registration separately, enabling the definition of reusable test patterns that can be instantiated later with different type sets.
+
+### Workflow Overview
+
+- **Task**: Define test patterns for unspecified types and instantiate them later.
+- **Prerequisites**: Understanding of typed tests and templates.
+- **Expected Outcome**: Reusable test definitions, instantiable with multiple type sets.
+- **Time Estimate**: 30 minutes
+- **Difficulty**: Advanced
+
+### Step-by-Step Instructions
+
+<Steps>
+<Step title="Declare a Type-Parameterized Test Suite">
+Use `TYPED_TEST_SUITE_P` macro to declare a test suite template without tying it to any types.
+
+```cpp
+template <typename T>
+class MyPatternTest : public testing::Test {};
+
+TYPED_TEST_SUITE_P(MyPatternTest);
+```
+</Step>
+
+<Step title="Define Tests Using TYPED_TEST_P">
+Define tests with `TYPED_TEST_P`, referring to the type via `TypeParam`.
+
+```cpp
+TYPED_TEST_P(MyPatternTest, ExampleTest) {
+  TypeParam value = TypeParam();
+  EXPECT_EQ(value, value);
+}
+```
+</Step>
+
+<Step title="Register the Tests">
+Register defined tests with `REGISTER_TYPED_TEST_SUITE_P`, specifying all test names.
+
+```cpp
+REGISTER_TYPED_TEST_SUITE_P(MyPatternTest, ExampleTest);
+```
+</Step>
+
+<Step title="Instantiate with Concrete Types">
+Instantiate the pattern for specific types using `INSTANTIATE_TYPED_TEST_SUITE_P`.
+
+```cpp
+using Implementations = ::testing::Types<int, double>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyInst, MyPatternTest, Implementations);
+```
+</Step>
+</Steps>
+
+### Practical Tips
+
+- You can instantiate the same type-parameterized test suite multiple times with different type sets and prefixes.
+- Organize reusable test definitions in headers to be included in multiple translation units.
+- Ensure test suite and instantiations are in the same namespace if needed.
+
+---
+
+## Troubleshooting & Tips
+
+- **Duplicate instantiations**: Provide unique prefixes in `INSTANTIATE_TEST_SUITE_P` and `INSTANTIATE_TYPED_TEST_SUITE_P` to avoid name collisions.
+- **Missing instantiations**: If any `TEST_P` or `TYPED_TEST_P` is not instantiated, GoogleTest reports a failure in `GoogleTestVerification`. Suppress with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` if intentional.
+- **Invalid test names**: Custom names for parameterized test cases must be ASCII alphanumeric or underscore and unique.
+- **Parameter lifespan**: Raw pointer parameters require careful lifetime management.
+- **Generator evaluation timing**: Parameter generators run during `InitGoogleTest()`, so any runtime-dependent parameter generation should happen before this call.
+
+---
+
+## Next Steps & Related Content
+
+- Explore [Test Discovery and Execution](../guides/getting-started-testing/test-discovery-execution.md) to learn about filtering and running subsets of tests.
+- Combine parameterized and typed tests with mocking capabilities from [GoogleMock](../overview/introduction-value/what-is-googletest.md) for advanced testing.
+- Delve into [Creating Your First Test](../guides/getting-started-testing/creating-first-test.md) if new to test writing.
+- Learn how to [Run and Validate Tests](../getting-started/first-steps/running-tests.md) to ensure coverage.
+
+---
+
+## References
+
+- [Testing Reference: TEST_P, INSTANTIATE_TEST_SUITE_P](../docs/reference/testing.md#TEST_P)
+- [Advanced Topics: Typed and Type-Parameterized Tests](../docs/advanced.md#typed-tests)
+- [Value-Parameterized Tests](../docs/advanced.md#value-parameterized-tests)
+- [Sample Abstract Tests in GoogleTest repository](https://github.com/google/googletest/tree/main/samples)
+
+---
+
+Unlock new levels of test maintainability and coverage with parameterized and typed tests — systematically verify your code’s behavior over multiple inputs and types with succinct, reusable test suites.
